Increase contrast for comments. Fixes #8

--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -9,7 +9,7 @@
 @syntax-cursor-color: #c0c5ce;
 @syntax-selection-color: rgba(128, 203, 196, 0.13);
 @syntax-background-color: #263238;
-@syntax-comments-color: #3c4e57;
+@syntax-comments-color: #506E79;
 
 // Guide colors
 @syntax-wrap-guide-color: #65737e;
